2006-05-17  James Turner  <james@worldforge.org>

	* Eris/DeleteLaters.cpp: switch the delete later queue to be a deque
	  instead of a vector, and hence preserve order of items to be deleted.

2006-05-17  James Turner  <james@worldforge.org>

	* Eris/Account.cpp: no longer disconnect the connection when logout
	  from the account completes.

2006-05-16  James Turner  <james@worldforge.org>

	* Eris/Account.cpp, Eris/Account.h, Eris/Avatar.cpp: initial work to
	  support client-directed deactivation of a character. This is work in
	  progress, but the API is intended to be final; comments are
	  welcome.

2006-05-15  James Turner  <james@worldforge.org>

	* Eris/Account.cpp: modify the Logout op sent from Account, to
	  conform to the revised format.

2006-05-15  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Connection.cpp: Avoid an issue with modifying a deque after
	  it has been cleared.

	* bindings/polls/glib/PollGlib.h: Update glib poll to handle
	  changes in the timed event API.

2006-05-10  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Calendar.h: Remove Atlas include in favour of forward
	  declarations.

2006-05-02  James Turner  <james@worldforge.org>

	* Eris/Task.h: fix name() to return by reference, as intended; thanks
	  Erik.

	* test/viewTest.h, test/viewTest.cpp: add basic task test
	
	* test/testOutOfGame.cpp, test/testOutOfGame.h: add test for duplicate
	  account creation.
	  
	* test/testCalendar.cpp: add crude calendar code test

2006-05-01  James Turner  <james@worldforge.org>

	* Eris/EntityRef.h: add equality and ordering operators.

2006-04-30  James Turner  <james@worldforge.org>

	* Eris/Task.h, Eris/Task.cpp: when a task is deleted, force it to be
	  removed from the prediction set.

2006-04-28  James Turner  <james@worldforge.org>

	* Eris/Task.h: missing newline at end of file for Loooooooonix.

2006-04-28  James Turner  <james@worldforge.org>

	* Eris/Task.cpp, Eris/Task.h: add in initial work on exposing Tasks to
	  clients.
	  