@@ -1,3 +1,8 @@
+2006-05-19  James Turner  <james@worldforge.org>
+
+	* Eris/Account.cpp: when account is deleted, and the connection is
+	  still live, send logout ops from the account and each active character.
+
 2006-05-17  James Turner  <james@worldforge.org>
 
 	* Eris/DeleteLaters.cpp: switch the delete later queue to be a deque
